# ftcvanguard

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  capacitor.config.ts  default_backup_20260112_095035.db  docker-compose.yml  docker-entrypoint.sh  dockerbp.sh  main.py  mock_pitviper.py  package-lock.json  package-mobile.ps1  package.json  package.ps1  package.sh  pyproject.toml  requirements.txt  settings.toml.example  tsconfig.json
.codex/: config.toml
.github/workflows/: docker-image.yml
.svelte-kit/: ambient.d.ts  non-ambient.d.ts
.svelte-kit/output/client/: pitviper.html
.svelte-kit/output/server/: manifest-full.js  manifest.js
android/app/: build.gradle
android/app/release/: output-metadata.json
app/: api.py  server.py
electron/: capacitor.config.ts  live-runner.js  package-lock.json  package.json
electron/src/: setup.ts
frontend/: app.html  index.html  package-lock.json  register.html  vite.config.ts
frontend/src/: App.svelte  app.css  main.ts
frontend/src/components/: TopNav.svelte
frontend/src/pages/: AppPage.svelte  LandingPage.svelte  RegisterPage.svelte
ios/App/App/: AppDelegate.swift  (+1 more)
legacy/: app.html
legacy/assets/: app.ts
src/: app.html
src/routes/: +page.svelte  layout.css
static/: admin.html  app.html  home.html  index.html  landing.html  login.html  register.html  robots.txt  sitemap.xml
static/assets/: admin.js  admin.ts  app.js  app.ts  main-BS3X1zqq.css  main-QP_xkxhq.js  pitviper.js  pitviper.ts  style.css  vgpgp.af  vgpgp_desktop.af
tests/: analysis.py  database.py  login.py  register.py
(+58 files in other folders)
