[project]
name = "ftcvanguard"
version = "1.0.0"
description = "unified ftc management infra. provide streamlined, real-time data, enabling rapid strategic insights. instant situational awareness, precise decisions, and ultratactical asymmetry."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "argon2-cffi>=25.1.0",
    "dotenv>=0.9.9",
    "flask>=3.1.2",
    "gunicorn>=23.0.0",
    "pyjwt[crypto]>=2.10.1",
    "requests>=2.32.5",
]
