[project]
name = "ftcvanguard"
version = "2.0.0"
description = "Real-time everything solution for FTC teams. Schedule, scout, and scheme, all from your mobile/desktop device."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.131.0",
    "psycopg2-binary>=2.9.11",
    "requests>=2.32.5",
    "uvicorn>=0.41.0",
]
